--- a/_layouts/sheet.html
+++ b/_layouts/sheet.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Arvo|Josefin+Slab" rel="stylesheet">
-    <link rel="stylesheet" href="../css/sheet.css" />
+    <link rel="stylesheet" href="/css/sheet.css" />
   </head>
   <body>
     {{ content }}
